# IR-pen-tracker

./: .gitignore  IR_tracking_spec.md  README.md  config.json  desk_calibration copy.json  desk_calibration.json  pyproject.toml  real_sense_setting.json  test_git.md
.trae/rules/: coding-rule.md
docs/: app_function.md  ir_pen_tracking_spec.md  ir_pen_tracking_spec_stereo.md  project_requirement.md  project_software_spec.md  project_spec.md
scripts/: test_realsense_fps.py
src/ir_pen_tracker/: main.py
src/ir_pen_tracker/algo/: calibration.py  stereo_pen_tracker.py
src/ir_pen_tracker/core/: config_loader.py  types.py
src/ir_pen_tracker/io/: kinect_camera.py  realsense_camera.py
src/ir_pen_tracker/logic/: app_controller.py
src/ir_pen_tracker/ui/: main_window.py
src/kinect_pen/: main.py
src/kinect_pen/core/: interfaces.py  (+2 more)
tests/: test_body_tracker.py
tmpscripts/: align_color_to_depth.py  calibrate_desk.py  check_code.ps1  check_color_transform.py  check_extrinsics.py  check_proj_2d_to_2d.py  check_projection.py  debug_mediapipe.py  debug_mediapipe_v2.py  debug_mediapipe_v3.py  inspect_calib.py  inspect_pyk4a.py  inspect_pyk4a_v2.py  ir_debug_vis.py  pen_tracker_debug.py  pen_trakcer_debug_realsense.py  preview_realsense_depth.py  print_distortion_coeffs.py  print_realsense_ir_format.py  raw_ir_debug.py  raw_ir_debug_standalone.py  realsense_exposure_test.py  realsense_ir_compare.py  record_kinect_raw.ps1  run_live_vis.py  run_tests.ps1  validate_kinect.ps1  validate_kinect.py  verify_body_pose.ps1  verify_hand_extrapolation.py  verify_projection_logic.py
(+15 files in other folders)
