[project]
name = "kinect-pen-tracker"
version = "0.1.0"
description = "Kinect-based 6-DoF Brush Tracking & Body Pose Estimation System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "pyserial>=3.5",
     "pyk4a>=1.5.0",
     "pyrealsense2>=2.54.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinect_pen"]
